routing and form start

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Little Lemon Restaurant online app"/>
+    <meta name="author" content="Bryan Irvin" />
     <meta name="og:title" content="Little Lemon Restaurant Online"/>
     <meta name="og:description" content="The Little Lemon Restaurant online presence providing order and reservation service to our valued customers."/>
     <meta name="og:image" content="%PUBLIC_URL%/promo.png"/>
